<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/id_cardinfo"
android:background="@drawable/gradient_list">



<android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    >

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/card_collapse"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:fitsSystemWindows="true"
        app:contentScrim="?colorPrimary"
        app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">


        <ImageView
            android:id="@+id/image_gen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:layout_collapseMode="parallax" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:minWidth="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_collapseMode="none"
            app:title="Informações"></android.support.v7.widget.Toolbar>

    </android.support.design.widget.CollapsingToolbarLayout>

</android.support.design.widget.AppBarLayout>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/id_do_cart_o"
                android:textColor="@color/fui_bgFacebook" />

            <TextView
                android:id="@+id/gato_id_cartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical|center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:requiresFadingEdge="vertical"
            app:cardCornerRadius="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/estabelecimento"
                android:textColor="@color/fui_bgFacebook" />

            <TextView
                android:id="@+id/gato_nome_estabelecimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical|center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/pontos_em_cart_o"
                android:textColor="@color/fui_bgFacebook" />


            <TextView
                android:id="@+id/gato_pontos_cartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical|center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="5dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/data_de_ader_ncia"
                android:textColor="@color/fui_bgFacebook" />

            <TextView
                android:id="@+id/gato_date_creation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical|center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/cidade"
                android:textColor="@color/fui_bgFacebook" />

            <TextView
                android:id="@+id/gato_cidade_estabelecimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical|center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/morada"
                android:textColor="@color/fui_bgFacebook" />

            <TextView
                android:id="@+id/gato_morada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical|center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/descri_o"
                android:textColor="@color/fui_bgFacebook" />

            <TextView
                android:id="@+id/gato_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/cardmovs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/movimentos"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/fui_bgFacebook"

            />

        <Button
            android:id="@+id/killcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_bg_rounded_corners_red"
            android:text="@string/desfidelizar"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"

            />


    </LinearLayout>



</android.support.v4.widget.NestedScrollView>


<!--
<com.hitomi.cmlibrary.CircleMenu
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/circlemenu"
    android:layout_alignParentBottom="true"
    android:layout_centerInParent="true"
    android:layout_alignParentRight="true"/>-->


</android.support.design.widget.CoordinatorLayout>


